--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "airtable": "^0.12.1",
     "contentful": "^10.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
